--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
     </div>
 
     <!-- External Libraries -->
-    <script type="module" src="js/libs/three.module.min.js"></script>
-    <script type="module" src="js/libs/OrbitControls.js"></script>
-    <script src="js/libs/nipplejs.min.js"></script>
+    <script type="module" src="./js/libs/three.module.min.js"></script>
+    <script type="module" src="./js/libs/OrbitControls.js"></script>
+    <script src="./js/libs/nipplejs.min.js"></script>
 
     <!-- Wrappers & Modules -->
-    <script type="module" src="js/libs/nipplejs.module.js"></script>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="./js/libs/nipplejs.module.js"></script>
+    <script type="module" src="./js/main.js"></script>
 
 </body>
 </html>
